--- a/DioLive.Spred.WebUI/project.json
+++ b/DioLive.Spred.WebUI/project.json
@@ -91,8 +91,7 @@
   },
 
   "scripts": {
-    "precompile": [ "dotnet bundle" ],
-    "prepublish": [ "bower install" ],
+    "prepublish": [ "bower install", "dotnet bundle"],
     "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
   },
 
