Move from SQLite to MS SQL Server

--- a/DioLive.Spred.WebUI/appsettings.json
+++ b/DioLive.Spred.WebUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DioLive.Spred.WebUI.db"
+    "DefaultConnection": "Data Source=.\\MSSQL;Initial Catalog=Spred;Integrated Security=true"
   },
   "Logging": {
     "IncludeScopes": false,
